# bevy_entity_ptr

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  llm-context.md
.github/workflows/: ci.yml
benches/: traversal.rs
examples/: README.md  concurrent_systems.rs  entity_graph.rs  mixed_usage.rs  tree_traversal.rs
src/: handle.rs  lib.rs  nav.rs  ptr.rs
