[package]
name = "bevy_entity_ptr"
version = "0.2.0"
edition = "2021"
rust-version = "1.81"
repository = "https://github.com/VisVivaSpace/bevy_entity_ptr.git"
description = "Ergonomic smart-pointer-like access to Bevy entities (immutable only)"
license = "MIT"
readme = "README.md"
keywords = ["bevy", "ecs", "entity", "gamedev", "pointer"]
categories = ["game-development", "game-engines"]

# Exclude internal development files from published package
exclude = [
    "bevy_entity_ptr_plan.md",
    "CLAUDE.md",
    ".claude/",
]

[dependencies]
bevy_ecs = "0.15"

[features]
default = []
nav-traits = []
