[package]
name = "bevy_entity_ptr"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
authors = ["Nathan Strange <info@visviva.space>"]
repository = "https://github.com/VisVivaSpace/bevy_entity_ptr.git"
homepage = "https://github.com/VisVivaSpace/bevy_entity_ptr"
documentation = "https://docs.rs/bevy_entity_ptr"
description = "Ergonomic smart-pointer-like access to Bevy entities (immutable only)"
license = "MIT"
readme = "README.md"
keywords = ["bevy", "ecs", "entity", "gamedev", "pointer"]
categories = ["game-development", "game-engines"]

# Exclude internal development files from published package
exclude = [
    "bevy_entity_ptr_plan.md",
    "CLAUDE.md",
    ".claude/",
    "tasks/",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
bevy_ecs = "0.17"

[features]
default = []
nav-traits = []
